# tradan

./: .env.example  .gitignore  SETUP.md  download_binance.py  notes.txt  package.json  pnpm-lock.yaml  tsconfig.json
backend/: .env.example  TRAINER.md  TRAINING_AT_SCALE.md  pyproject.toml  worker.md
backend/migrations/: 001_initial.sql  002_fix_microsecond_timestamps.sql  003_trainer_tables.sql  004_model_claiming.sql  005_model_ping.sql  006_live_testing_tables.sql
backend/scripts/: backfill_normalization_stats.py  evaluate_winners.sh  live_replay.py  live_weekly_check.sql  phase4a_summary.py  phase4c_entropy_summary.py  phase4d_summary.py  phase4e_idle_penalty_summary.py  sweep_phase1.py  sweep_phase2.py  sweep_phase3.py  sweep_phase4a.py  sweep_phase4c_entropy.py  sweep_phase4d_env_audit.py  sweep_phase4e_idle_penalty.py  winners.sql  winners_no_eval.sql
bot/: config.ts  drift-client.ts  ranger-vault.ts  risk-manager.ts  strategy.ts
docs/plans/: 2026-04-04-backend-frontend.md  2026-05-09-phase4-training-plan.md  2026-05-09-phase4a-seed-robustness.md  2026-05-09-phase4c-entropy-design.md  2026-05-10-phase4-env-audit-design.md
frontend/: package.json
frontend/src/: App.tsx  types.ts
infra/: .env.example  .gitignore  Makefile  README.md  base.tf  main.tf  outputs.tf  terraform.tfstate.1775482306.backup  train.tf  variables.tf  volume.tf
infra/scripts/: evaluate_winners.sh  (+15 more)
ingester/: .env.example  USAGE.md  pyproject.toml
ingester/src/ingester/: cli.py  config.py  db.py  downloader.py  parser.py  worker.py
scripts/: fund-strategy.ts  init-strategy.ts
(+80 files in other folders)
